# textwrap-macros

./: .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
ci/travis/: deploy.sh  functions.sh  script.sh  setup.sh
impl/: Cargo.toml  lib.rs
impl/src/: lib.rs
src/: lib.rs
tests/: dedent.rs  ident.rs  wrap.rs
