[package]
name = "textwrap-macros-impl"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies.proc-macro-hack]
version = "0.5"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["parsing"]

[dependencies.textwrap]
version = "0.11.0"
